--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </header>
 
 <main class="home">
-    <img src="images/WhatsApp Image 2026-02-08 at 12.32.48 PM.jpeg" alt="Photo de profil" class="avatar">
+    <img src="images/profil.jpg" alt="Photo de profil" class="avatar">
 
     <h2>Bienvenue sur mon site personnel</h2>
     <p>
@@ -36,4 +36,5 @@
 </footer>
 
 </body>
+
 </html>
